# YaP_backend_practices

./: .gitignore
TCP_Server/: CMakeLists.txt
TCP_Server/src/: main.cpp
TCP_UDP_async/: CMakeLists.txt
TCP_UDP_async/src/: tcp_client.cpp  tcp_server.cpp
TCP_UDP_practice/: CMakeLists.txt
TCP_UDP_practice/src/: tcp_client.cpp  tcp_server.cpp  udp_server.cpp
TCP_UDP_practice_2/: CMakeLists.txt
TCP_UDP_practice_2/src/: tcp_server.cpp
async_operations/src/: main.cpp
async_operations2/: CMakeLists.txt
async_operations2/src/: main.cpp
async_server/src/: main.cpp
boost_json/: CMakeLists.txt
boost_json/src/: main.cpp
caf_test/: CMakeLists.txt
caf_test/src/: main.cpp
cafeteria/precode/src/: cafeteria.h  clock.h  gascooker.h  ingredients.h  main.cpp
command_line/solution/src/: api_handler.h  game_server.h  model_app.h  model_game.cpp  request_handler.h
file_test/: CMakeLists.txt
file_test/src/: main.cpp
join_game/precode/src/: main.cpp  request_handler.cpp  request_handler.h
merge/src/: merge.cpp
radio/precode/: CMakeLists.txt
server_loggin_version/: http_server.cpp  http_server.h  main.cpp  request_handler.h
sprint2_first/src/: main.cpp
src/: api_handler.h  request_handler.h
static_content/precode/src/: http_server.h  main.cpp  request_handler.cpp  request_handler.h  stream_adapter.h  tcp_adapter.h
try/join_game/precode/src/: request_handler.cpp  request_handler.h
try/join_game_before_changes/precode/src/: main.cpp  request_handler.cpp  request_handler.h
